fixed img width and grid-gap

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,12 +117,11 @@ main {
 // Work/Projects
 .projects {
   display: grid;
-  grid-gap: 1px;
+  grid-gap: 20px;
   grid-template-columns: repeat(3, 1fr);
 
   img {
-    width: 250px;
-    height: 175px;
+    width: 100%;
     border: 3px #fff solid;
 
     &:hover {
